--- a/AkelaPasteleria/styles.css
+++ b/AkelaPasteleria/styles.css
@@ -4,29 +4,39 @@
   box-sizing: border-box!important;
 }
 
+}
+body{
+  margin-top: 130px;
+}
+
+
 html {
     font-family: GillSans, Calibri, Trebuchet, sans-serif;
   }
 
-.navbar-nav>li>a{
-  text-align: right;
+
+}
+#footer .block_various_links {
+padding: 15px 10px;
+margin-left: 224px;
 }
 
 #secciones {
     margin-top:80px;
-    min-height: 100%;
+    /*min-height:100%;*/
 }
+
 
 footer{
   overflow: hidden;
-  /*position: absolute;*/
+  position: absolute;
   clear: both;
   width: 100%;
   background: rgb(209, 8, 27);
   /*border-radius: 20px 20px 0 0;*/
   /*border: 2px solid black;*/
   height: 100px;
-  display: flex;
+  /*display: flex;*/
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -35,11 +45,10 @@ footer{
 
 }
 
-.footer.container{
 
-}
 footer li{
-  /*margin-right: 10px;*/
+  color: white;
+  margin-right: 10px;
   display: inline-block;
 }
 
