--- a/AkelaPasteleria/styles.css
+++ b/AkelaPasteleria/styles.css
@@ -23,8 +23,10 @@ margin-left: 224px;
 
 #secciones {
     margin-top:80px;
-    /*min-height:100%;*/
+    min-height:100%;
+    /*margin-bottom: -150px;*/
 }
+
 
 
 footer{
@@ -45,6 +47,12 @@ footer{
 
 }
 
+.col-md-*{
+
+}
+
+
+
 
 footer li{
   color: white;
@@ -57,3 +65,6 @@ footer a {
   text-decoration: none;
   text-transform: capitalize; /*convierte a mayuscula la primer letra*/
 }
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) {450px}
