--- a/AkelaPasteleria/styles.css
+++ b/AkelaPasteleria/styles.css
@@ -28,13 +28,10 @@ margin-left: 224px;
     /*margin-bottom: -150px;*/
 }
 
-<<<<<<< HEAD
 
-=======
-/*header .navbar{
+*header .navbar{*/
   background: rgb(223, 205, 193);
-}*/
->>>>>>> master
+}
 
 footer{
   overflow: hidden;
